Temporary simple fix for unbreakable feature name clipping.

--- a/FeatureTables.Generator/Outputs/Html/FeatureTests.css
+++ b/FeatureTables.Generator/Outputs/Html/FeatureTests.css
@@ -93,6 +93,9 @@ th {
     font-weight: normal;
     max-width: 10em;
     background-color: #b4cce4;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 th, td {
